2013-11-27  Colin Watson  <cjwatson@ubuntu.com>

	Generate Makefile.*.am directly from gentpl.py, eliminating the use
	of Autogen.  The Autogen definitions files remain intact as they
	offer a useful abstraction.

2013-11-27  Colin Watson  <cjwatson@ubuntu.com>

	Add grub_util_disable_fd_syncs call to turn grub_util_fd_sync calls
	into no-ops, and use it in programs that copy files but do not need
	to take special care to sync writes (grub-mknetdir, grub-rescue,
	grub-mkstandalone).

2013-11-26  Colin Watson  <cjwatson@ubuntu.com>

	* tests/util/grub-fs-tester.in: Execute xorriso from $PATH rather
	than hardcoding /usr/local/bin/xorriso.

2013-11-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Add PCI command activation to all PCI drivers as required for coreboot
	and maybe some other firmwares.

2013-11-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am: Reduce gratuituous differences between Apple
	and non-Apple variants of efiemu compile.

2013-11-25  Andrey Borzenkov <arvidjaar@gmail.com>

	*  configure.ac: Add explicit check for linking format of
	efiemu64; save it as EFIEMU64_LINK_FORMAT.
	* grub-core/Makefile.am: Use EFIEMU64_LINK_FORMAT instead of
	hardcoding linking format.

2013-11-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.c: Look for platform directories under pkglibdir
	and not pkgdatadir.

2013-11-25  Colin Watson  <cjwatson@ubuntu.com>
2013-11-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Add a --locale-directory option to grub-install and related tools.

	* include/grub/util/install.h (GRUB_INSTALL_OPTIONS): Add
	--locale-directory option.
	(enum grub_install_options): Add
	GRUB_INSTALL_OPTIONS_LOCALE_DIRECTORY.
	* util/grub-install-common.c (grub_install_help_filter): Handle
	GRUB_INSTALL_OPTIONS_LOCALE_DIRECTORY.
	(grub_install_parse): Likewise.
	(get_localedir): New function to check for a user-provided option
	before trying grub_util_get_localedir.
	(copy_locales): Use get_localedir rather than